--- a/common.css
+++ b/common.css
@@ -8,3 +8,13 @@
   background-color: black;
   border-radius: 8px;
 }
+
+.header h1 {
+  line-height: 48px;
+}
+
+.logo-icon {
+  width: 48px;
+  float: left;
+  padding-right: 8px;
+}
